[package]
name = "shl-server-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
chrono = { version = "0.4", features = ["serde"] }

axum = { version="0.6.12", features = ["ws"] }
tower = "0.4.13"
tower-http = { version = "0.3.4", features = ["trace", "compression-gzip", "add-extension"] }
tracing = "0.1"
tracing-subscriber = { version="0.3", features = ["env-filter"] }
tokio = { version = "1.28.0", features = ["full"] }
reqwest = { version = "0.11.17", features = ["json"] }
futures = "0.3" # for our async / await blocks
lazy_static = "1.4.0"

reqwest-eventsource = "0.4.0"
walkdir = "2.3.3"
bounded-vec-deque = "0.1.1"
async-stream = "0.3.5"
jsonwebtoken = "8.3.0"
anyhow = "1.0.71"

[profile.release]
incremental = true
